<resources>
    <string name="app_name">Sprint1</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--  welcome  -->
    <string name="Welcome_Title">Welcome to</string>
    <string name="Welcome_Name">WanderSync!</string>
    <!--  home_log  -->
    <string name="Home_Log_Title">Logistics</string>
    <string name="Home_Log_Visualization">Visualization</string>
    <string name="Home_Log_AddNote">Add Note</string>
    <string name="Home_Log_AddCollaborator">Add Collaborator</string>
    <!--  home_des  -->
    <string name="Home_Des_Title">Destination</string>
    <string name="Home_Des_LogTravel">Add Destination</string>
    <string name="Home_Des_LogTravel_TravelLocation">Travel Location</string>
    <string name="Home_Des_LogTravel_StartDate">Estimated Start (MM/DD/YYYY)</string>
    <string name="Home_Des_LogTravel_EndDate">Estimated End (MM/DD/YYYY)</string>
    <string name="Home_Des_LogTravel_Cancel">Cancel</string>
    <string name="Home_Des_LogTravel_Submit">Submit</string>
    <string name="Home_Des_Calculate">Calculate Vacation Time</string>
    <string name="Home_Des_Calculate_StartDate">Start Date (MM/DD/YYYY)</string>
    <string name="Home_Des_Calculate_EndDate">End Date (MM/DD/YYYY)</string>
    <string name="Home_Des_Calculate_Duration">Duration</string>
    <string name="Home_Des_Calculate_Button">Calculate</string>
    <string name="HomeDestination_Calculate_Message">Vacation Days Occupied: %1$s</string>
    <string name="HomeDestination_Calculate_Error">Failed to calculate occupied days.</string>
    <string name="HomeDestination_Calculate_Back">Back</string>
    <string name="Home_Des_ListDes_Empty">No travel records found.</string>
    <!--  home_din  -->
    <string name="Home_Din_Title">Dining</string>
    <string name="Home_Din_ListDining_Location">Location: </string>
    <string name="Home_Din_ListDining_Website">Website: </string>
    <string name="Home_Din_ListDining_Time">Time: </string>
    <string name="Home_Din_AddDining">Add Dining</string>
    <string name="Home_Din_AddDining_Location">Location</string>
    <string name="Home_Din_AddDining_Website">Website</string>
    <string name="Home_Din_AddDining_Time">Time (MM/DD/YYYY)</string>
    <string name="Home_Din_AddDining_Cancel">Cancel</string>
    <string name="Home_Din_AddDining_Submit">Submit</string>
    <!--  home_acc  -->
    <string name="Home_Acc_Title">Accommodations</string>
    <string name="Home_Acc_ListAccommodation_Location">Location: </string>
    <string name="Home_Acc_ListAccommodation_RoomNum">Room Num: </string>
    <string name="Home_Acc_ListAccommodation_RoomType">Room Type: </string>
    <string name="Home_Acc_ListAccommodation_CheckIn">Check In: </string>
    <string name="Home_Acc_ListAccommodation_CheckOut">Check Out: </string>
    <string name="Home_Acc_AddAccommodation">Add Accommodation</string>
    <string name="Home_Acc_AddAccommodation_Location">Location</string>
    <string name="Home_Acc_AddAccommodation_RoomNum">Room Number</string>
    <string name="Home_Acc_AddAccommodation_RoomType">Room Type</string>
    <string name="Home_Acc_AddAccommodation_CheckIn">Check In (MM/DD/YYYY)</string>
    <string name="Home_Acc_AddAccommodation_CheckOut">Check Out (MM/DD/YYYY)</string>
    <string name="Home_Acc_AddAccommodation_Cancel">Cancel</string>
    <string name="Home_Acc_AddAccommodation_Submit">Submit</string>
    <!--  home_tra  -->
    <string name="Home_Tra_Title">Travel Community</string>
    <string name="Home_Tra_AddPost">Add Travel Post</string>
    <string name="Home_Tra_ListPost_Username">Username: %s</string>
    <string name="Home_Tra_ListPost_Start">Start: %s</string>
    <string name="Home_Tra_ListPost_End">End: %s</string>
    <string name="Home_Tra_ListPost_Destination">Destination: %s</string>
    <string name="Home_Tra_ListPost_Accommodation">Accommodation: %s</string>
    <string name="Home_Tra_ListPost_Dining">Dining: %s</string>
    <string name="Home_Tra_ListPost_Note">Note: %s</string>
    <string name="Home_Tra_AddTravel_Start">Start Date (MM/DD/YYYY)</string>
    <string name="Home_Tra_AddTravel_End">End Date (MM/DD/YYYY)</string>
    <string name="Home_Tra_AddTravel_Destination">Destination</string>
    <string name="Home_Tra_AddTravel_Accommodation">Accommodation</string>
    <string name="Home_Tra_AddTravel_Dining">Dining</string>
    <string name="Home_Tra_AddTravel_Note">Note</string>
    <string name="Home_Tra_AddTravel_Cancel">Cancel</string>
    <string name="Home_Tra_AddTravel_Submit">Submit</string>

    <string name="User_SignIn_Title">Log In</string>
    <string name="create_login">Log In</string>
    <string name="create_acc">Create an Account</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="start">Start</string>
    <string name="quit">Quit</string>
</resources>